# Perfect-Sync

./: .gitignore  BUILD.md  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
catalog/: catalog.json
core/: Cargo.toml
core/fixtures/: catalog.sample.json
core/src/: catalog.rs  codec.rs  compat.rs  deps.rs  diff.rs  game.rs  lib.rs  loader.rs  preview.rs  process.rs  profile.rs  resolver.rs  types.rs  version.rs
core/tests/: e2e_live.rs
docs/: index.html
docs/superpowers/plans/: 2026-06-02-perfect-sync-phase1-core-and-shell.md
docs/superpowers/specs/: 2026-06-02-perfect-sync-mod-manager-design.md
scripts/: build.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  settings.rs
src/components/: AddModPanel.tsx  ErrorBoundary.tsx  LaunchBar.tsx  LaunchWarning.tsx  LobbyCodeModal.tsx  MainPanel.tsx  ModRow.tsx  Pill.tsx  ReleasePicker.tsx  SettingsModal.tsx  SetupModal.tsx  ShareModal.tsx  Sidebar.tsx  Toast.tsx  Toggle.tsx  TopBar.tsx  TrustBadge.tsx  VersionPicker.tsx
src/data/: mock.ts
src/lib/: bridge.ts  palette.ts  types.ts
