[package]
name = "perfect-sync-core"
version = "0.1.0"
edition = "2021"
description = "Core logic for Perfect-Sync (catalog, lobby codec, resolver, loader)"
license = "MIT"
repository = "https://github.com/artriy/Perfect-Sync"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
base64 = "0.22"
crc32fast = "1"
regex = "1"
thiserror = "2"
ureq = { version = "2", features = ["json"] }
zip = "2"

[dev-dependencies]
tempfile = "3"
